# IntermeditePython

./: README.md  pyproject.toml
src/intermediate_python/: __init__.py  main.py  osmodule.py
tests/: test_main.py
