[project]
name = "IntermediatePython"
version = "0.1.0"
description = "A Python project scaffold."
readme = "README.md"
authors = ["GitHub Copilot <copilot@example.com>"]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
